--- a/index.html
+++ b/index.html
@@ -6,25 +6,169 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD empleados</title>
-    <script src="logica.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="syles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
-    <header>
-        <div class="main">
-            <span id = "titulo">C</span>
-            <span id = "titulo">R</span>
-            <span id = "titulo">U</span>
-            <span id = "titulo">D</span>
-            <span id = "titulo">U</span>
-            <span id = "titulo">D</span>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">CRUDUD</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <button type="button" id="crearBoton" class="btn btn-outline-primary">Crear</button>
+                </li>
+                <li class="nav-item">
+                    <button type="button" id="editarBoton" class="btn btn-outline-primary">Actualizar</button>
+                </li>
+                <li class="nav-item">
+                    <button type="button" id="borrarBoton" class="btn btn-outline-primary">Borrar</button>
+                </li>
+            </ul>
+          </div>
         </div>
-        
-        <div class="contenerdor-botones">
-            <button id = "crear"><span>Crear</span></button>
-            <button id = "editar"><span>Editar</span></button>
-            <button id = "borrar"><span>Borrar</span></button>
+      </nav>
+
+      <div class="container" id = "crearContainer">
+        <div>
+            <h4>Crear empleado</h4>
         </div>
-    </header> 
+        <form id = "crearForm">
+
+            <div class="mb-3">
+              <label for="nombre" class="form-label">Nombre empleado</label>
+              <input type="text" class="form-control" id="nombreCrear" placeholder="Digite el nombre del empleado" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="apellido" class="form-label">Apellidos empleado</label>
+                <input type="text" class="form-control" id="apellidoCrear" placeholder="Digite los apellidos del empleado" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="rol" class="form-label">Rol</label>
+                <select class="form-select" aria-label="Default select example" id = "rolCrear" required>
+                    <option selected disabled value="0">Elija el rol del empleado</option>
+                    <option value="1">Administrador deportivo</option>
+                    <option value="2">Director deportivo</option>
+                    <option value="3">Fisioterapeuta</option>
+                    <option value="4">Entrenador</option>
+                    <option value="5">Auxiliar deportivo</option>
+                    <option value="6">Docente</option>
+                </select>
+            </div>
+
+            <div class="mb-3">
+                <label for="sede" class="form-label">Sede</label>
+                <select class="form-select" aria-label="Default select example" id = "sedeCrear" required>
+                    <option selected disabled value="0">Elija la sede donde operara el empleado</option>
+                    <option value="1">Aduanilla de Paiba</option>
+                    <option value="2">Calle 34</option>
+                    <option value="3">Facultad de ingenieria</option>
+                    <option value="4">Calle 64</option>
+                    <option value="5">Ciudadela universitaria Bosa Porvenir</option>
+                    <option value="6">Macarena A</option>
+                    <option value="7">Macarena B</option>
+                    <option value="8">Facultad tecnologica</option>
+                    <option value="9">Vivero</option>
+                    <option value="10">ASAB</option>
+                </select>
+            </div>
+
+            <div class="mb-3">
+                <label for="jefe" class="form-label">Jefe</label>
+                <input type="text" class="form-control" id="jefeCrear" placeholder="Digite el codigo del jefe correspondiente" required>
+            </div>
+
+            <button type="submit" class="btn btn-primary" id = "enviarCrear">Enviar</button>
+          </form>
+          <div id="liveAlertPlaceholder"></div>
+      </div>
+
+      <div class="container" id = "actualizarContainer">
+        <div>
+            <h4>Actualizar empleado</h4>
+        </div>
+        <form id = "actualizarForm">
+
+            <div class="mb-3">
+              <label for="nombre" class="form-label">Nombre empleado</label>
+              <input type="text" class="form-control" id="nombreActualizar" placeholder="Digite el nombre del empleado" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="apellido" class="form-label">Apellidos empleado</label>
+                <input type="text" class="form-control" id="apellidoActualizar" placeholder="Digite los apellidos del empleado" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="rol" class="form-label">Rol</label>
+                <select class="form-select" aria-label="Default select example" id = "rolActualizar" required>
+                    <option selected disabled>Elija el rol del empleado</option>
+                    <option value="1">Administrador deportivo</option>
+                    <option value="2">Director deportivo</option>
+                    <option value="3">Fisioterapeuta</option>
+                    <option value="4">Entrenador</option>
+                    <option value="5">Auxiliar deportivo</option>
+                    <option value="6">Docente</option>
+                </select>
+            </div>
+
+            <div class="mb-3">
+                <label for="sede" class="form-label">Sede</label>
+                <select class="form-select" aria-label="Default select example" id = "sedeActualizar" required>
+                    <option selected disabled value="0">Elija la sede donde operara el empleado</option>
+                    <option value="1">Aduanilla de Paiba</option>
+                    <option value="2">Calle 34</option>
+                    <option value="3">Facultad de ingenieria</option>
+                    <option value="4">Calle 64</option>
+                    <option value="5">Ciudadela universitaria Bosa Porvenir</option>
+                    <option value="6">Macarena A</option>
+                    <option value="7">Macarena B</option>
+                    <option value="8">Facultad tecnologica</option>
+                    <option value="9">Vivero</option>
+                    <option value="10">ASAB</option>
+                </select>
+            </div>
+
+            <div class="mb-3">
+                <label for="jefe" class="form-label">Jefe</label>
+                <input type="text" class="form-control" id="jefeActualizar" placeholder="Digite el codigo del jefe correspondiente" required>
+            </div>
+
+            <button type="submit" class="btn btn-primary" id = "enviarActualizar">Enviar</button>
+          </form>
+        </div>
+
+      <div id = "borrarContainer" class="container">
+        <div>
+            <h4>Borrar empleado</h4>
+        </div>
+        <form id = "borrarForm">
+
+            <div class="mb-3">
+              <label for="nombre" class="form-label">Nombre empleado</label>
+              <input type="text" class="form-control" id="nombreBorrar" placeholder="Digite el nombre del empleado" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="apellido" class="form-label">Apellidos empleado</label>
+                <input type="text" class="form-control" id="apellidoBorrar" placeholder="Digite los apellidos del empleado" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="IDBorrar" class="form-label">ID empleado</label>
+                <input type="text" class="form-control" id="IDBorrar" placeholder="Digite el id del empleado" required>
+            </div>
+
+            <button type="submit" class="btn btn-primary" id = "enviarBorrar">Enviar</button>
+          </form>
+      </div>
+
+      <script src="logica.js"></script>
 </body>
 </html>
