Vista para ver todos los empleados

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                     <button type="button" id="borrarBoton" class="btn btn-outline-primary">Borrar</button>
                 </li>
+                <li class="nav-item">
+                    <button type="button" id="verBoton" class="btn btn-outline-primary">Ver</button>
+                </li>
             </ul>
           </div>
         </div>
@@ -167,6 +170,12 @@
 
             <button type="submit" class="btn btn-primary" id = "enviarBorrar">Enviar</button>
           </form>
+      </div>
+
+      <div id = "verContainer" class="container">
+        <div class="card">
+
+        </div>
       </div>
 
       <script src="logica.js"></script>
