--- a/Front/index.html
+++ b/Front/index.html
@@ -73,8 +73,9 @@
 
             <div class="mb-3">
                 <label for="jefe" class="form-label">Jefe</label>
-                <input type="text" class="form-control" id="jefeCrear" placeholder="Digite el codigo del jefe correspondiente" required disabled>
-            </div>
+                <select class="form-select" aria-label="Default select example" id = "jefeCrear" disabled>
+                </select>
+                </div>
 
             <button type="submit" class="btn btn-primary" id = "enviarCrear">Enviar</button>
           </form>
@@ -121,7 +122,7 @@
 
             <div class="mb-3">
                 <label for="jefe" class="form-label">Jefe</label>
-                <input type="text" class="form-control" id="jefeActualizar" placeholder="Digite el codigo del jefe correspondiente" required>
+                <select class="form-select" aria-label="Default select example" id = "jefeActualizar"></select>
             </div>
 
             <button type="submit" class="btn btn-primary" id = "enviarActualizar">Enviar</button>
