--- a/Front/vistaDirector.html
+++ b/Front/vistaDirector.html
@@ -34,6 +34,6 @@
            
         </div>
 
-        <script src="logicaAuxiliar.js"></script>
+        <script src="logicaDirector.js"></script>
     </body>
 </html>
