--- a/Front/vistaAuxiliar.html
+++ b/Front/vistaAuxiliar.html
@@ -33,6 +33,12 @@
             </div>
         </nav>
 
+        <div class = "container" id = "datosAuxiliar">
+          <div> <h4 id = "nombreAuxiliar"> Nombre y apellido del auxiliar </h4></div>
+          <div> <h4 id = "sedeAuxiliar"> Sede del auxiliar </h4></div>
+          <div> <h4 id = "fecha-hora"> Fecha y hora </h4></div>
+        </div>
+
         <div class="container" id = "docenteContainer">
             <div>
                 <h4>Datos del docente</h4>
