--- a/Front/vistaDirector.html
+++ b/Front/vistaDirector.html
@@ -30,6 +30,12 @@
             </div>
         </nav>
 
+        <div class = "container" id = "datosAuxiliar">
+            <div> <h4 id = "nombreDirector"> Nombre y apellido del director </h4></div>
+            <div> <h4 id = "sedeDirector"> Sede del director </h4></div>
+            <div> <h4 id = "fecha-hora"> Fecha y hora </h4></div>
+          </div>
+
         <div class="container" id = "crearContainer">
            
         </div>
