Datos de estudiante y docente

--- a/Front/vistaAuxiliar.html
+++ b/Front/vistaAuxiliar.html
@@ -62,7 +62,15 @@
                   <button type="button" class="btn btn-primary" id = "enviarDocente">Enviar</button>
                 </div>
               </form>
-          </div>
+
+              <table class = "table" id = "tablaDatosDocente">
+                <thead>
+                  <th id="thNombreDocente" scope="col">Nombre docente</th>
+                  <th id="thApellidoDocente" scope="col">Apellido docete</th>
+                  <th id="thSedeDocente" scope="col">Sede docente</th>
+                  <th id="thFecha" scope="col">Fecha</th>
+                </thead>
+              </table>
         </div>
 
         <div class="container" id = "estudianteContainer">
@@ -80,8 +88,16 @@
                 <div>
                   <button type="button" class="btn btn-primary" id = "enviarEstudiante">Enviar</button>
                 </div>
-              </form>
-          </div>
+            </form>
+
+            <table class = "table" id = "tablaDatosEstudiante">
+              <thead>
+                <th id="thNombreEstudiante" scope="col">Nombre docente</th>
+                <th id="thApellidoEstudiante" scope="col">Apellido docete</th>
+                <th id="thSedeEstudiante" scope="col">Sede docente</th>
+                <th id="thFecha2" scope="col">Fecha</th>
+              </thead>
+            </table>
         </div>
 
         <div class="container" id = "miembroEquipoContainer">
