Muchas cosas actualizadas

--- a/Front/vistaAuxiliar.html
+++ b/Front/vistaAuxiliar.html
@@ -115,7 +115,7 @@
                 <div class="mb-3">
                     <div class="mb-3">
                       <label for="codigo" class="form-label">Equipo</label>
-                      <input type="text" class="form-control" id="nombreEquipo" placeholder="Digite el nombre del equipo" required >
+                      <input type="text" class="form-control" id="nombreEquipo" placeholder="Digite el codigo del equipo" required >
                     </div>
                 </div>
   
@@ -123,6 +123,15 @@
                   <button type="button" class="btn btn-primary" id = "enviarEquipo">Enviar</button>
                 </div>
               </form>
+
+              <table class = "table" id = "tablaDatosEquipo">
+                <thead>
+                  <th id="thNombreEquipo" scope="col">Nombre equipo</th>
+                  <th id="thApellidoEquipo" scope="col">Apellido equipo</th>
+                  <th id="thSedeEquipo" scope="col">Sede equipo</th>
+                  <th id="thFecha3" scope="col">Fecha</th>
+                </thead>
+              </table>
           </div>
         </div>
 
