--- a/Front/vistaAuxiliar.html
+++ b/Front/vistaAuxiliar.html
@@ -57,6 +57,9 @@
              <h4 id = "sedeAuxiliar"> Sede del auxiliar </h4>
              <h4 id = "fecha-hora"> Fecha y hora </h4>
           </div>
+          <div id="elementos_mostradosAux">
+          </div>
+          <button class="btn btn-primary" id="enviarEleAux">Enviar elementos</button>
         </div>
 
         <div class="container" id = "docenteContainer">
@@ -91,6 +94,10 @@
                   <th id="thFecha" scope="col">Fecha</th>
                 </thead>
               </table>
+              <h1>Elementos: </h1>
+              <div id="elementos_mostrados">
+              </div>
+              <button class="btn btn-primary" id="enviarEle">Enviar elementos</button>
         </div>
 
         <div class="container" id = "estudianteContainer">
